# youdao-dict

./: Cargo.toml  diesel.toml  fire.html  zlib.html
migrations/2024-11-17-132231_create_history/: down.sql  up.sql
src/: cmd.rs  db.rs  gui.rs  main.rs  models.rs  schema.rs  tui.rs  youdao.rs
src/gui/tabs/: login.rs  tabs.rs
src/tabs/: common.rs  counter.rs  ferris.rs  history.rs  home.rs  login.rs  main.rs  mod.rs  settings.rs
