[package]
name = "youdao-dict"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
scraper = "0.21"
html2text = "0.13.2"
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
futures = "0.3.31"
clap = { version = "4.5.20", features = ["derive"] }
iced = { version = "0.13.1", features = ["highlighter", "image", "markdown", "tokio", "wgpu"] }
iced_aw = { version = "0.11.0", features = ["tabs", "tab_bar"] }
iced_fonts = { version = "0.1.1", features = ["nerd"] }

[[bin]]
name = "yd"
path = "src/main.rs"

# [[bin]]
# name = "tabs"
# path = "src/gui/tabs.rs"
